<resources>
    <string name="app_name">Evergreen</string>
    <string name="nextButton">Continue</string>
    <string name="gameOverText">Game over</string>
    <string name="newGame">Press to start new game</string>
    <string name="chooseAction">Choose action</string>
    <string name="introText1">Once upon a time, people lived closer to nature than now.
        \n\n
        Nowadays they walk between their different dwellings, not minding their surroundings as much.</string>
    <string name="introText2"></string>
    <string name="introText3">Glass and windows shattered, ceilings and walls caved in.
        \n\n
        Screams could be heard as lives were cut short.
        \n\n
        ...
        \n\n
        Suddenly now, you are so few. Supplies are running short and every choice of action matters.
    </string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">Hello\nworld</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="Heart">drawable/Heart.png</string>
    <string name="title_activity_log_viewer">logViewer</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_character">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="password_again">Verify Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="HP.name">HP</string>
    <string name="HP.desc">
        "HP or Hit points are a measure of how wounded or whole, sick or healthy you are. "
        "Once this reaches 0 you are knocked out and may be out of the game. "
        "HP is by default recovered by 1 point per day, assuming you aren't starving. "
        "Use the Recover action if you have been badly hurt. "
    </string>
    <string name="Food.name">Food</string>
    <string name="Food.desc">
        "The Food points represent how much food you have available. "
        "Regular survival consumes 2 points of food per day. "
        "For each missing point of food, you will start taking damage to your HP. "
        "Make sure to gather enough food, as it is unwise to run out of it! "
    </string>
    <string name="Materials.name">Materials</string>
    <string name="Materials.desc">
        "Material points represent all resources that may want to use to build, craft, invent or otherwise augment objects. "
        "Most actions that require materials do so implicitly. I.e., if the verbs sound like they require materials, they will require materials. "
        "Consuming materials during some action will, in general, generate emissions. "
        "It is therefore recommended to train the Material Efficiency skill"
    </string>
    <string name="Emissions.name">Emissions</string>
    <string name="Emissions.desc">
        "Emissions represent how much you are affecting the environment, both locally and overall. "
        "Having more emission points is, in general, a bad thing and has two major consequences: "
        "\n- it will attract more monsters of the Evergreen to your doorstep, and"
        "\n- it will may make the monsters more organized to take you out"
        "\n\nEmissions decrease by 1 unit per day, and are mainly gained from actions requiring materials, and even more so from using motorized transportation. "
    </string>
    <string name="Attack.name">Attack</string>
    <string name="Attack.desc">
        "The Attack points represent your ability to defend yourself. "
        "By default, you start with 10 points, which may be increased by equipping weapons, training certain skills and current circumstances. "
        "As Attack increases, so does your chances to land hits on enemies you fight. "
        "I.e., it increases the accuracy of your attacks in battle. "
        "\n\n"
        "In addition to Attack, weapons and skills can also give stat bonuses to inflicted damage, the amount of attacks per round, etc. "
        "Attack, Damage, and other attributes are presented below as needed. "
    </string>
    <string name="Defense.name">Defense</string>
    <string name="Defense.desc">
        "The Defense points represent your ability to defend yourself. "
        "By default you start with 10 points, which may be increased by equipping armors, training certain skills and current circumstances. "
        "As Defense increases, so does your chance to evade hits from attacking enemies that you fight. "
        "I.e., as it increases your evasion in battle. "
        "\n\n"
        "In addition to Defense, weapons and skills can also give stat bonuses that in other ways help you survive easier. "
        "For example Parry gives you a second roll of the dice to parry attacks that would otherwise have struck you. "
    </string>
    <string name="title_activity_very_cool_to_be_copy_pasted_from_and_deleted">
        VeryCoolToBeCopyPastedFromAndDeleted
    </string>
    <string name="ActiveAction">Active actions</string>
    <string name="DailyActions">Daily actions</string>
    <string name="SkillTraining">Skill training</string>
    <string name="log"><u>Event log</u></string>
    <string name="new_game">New game</string>
    <string name="load_game">Load game</string>
    <string name="singleplayer">Singleplayer</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="clear">Clear</string>
    <string name="menu">Menu</string>
    <string name="nextDay">Next day</string>
    <string name="back">Back</string>
    <string name="ok">OK</string>
    <string name="inventory">Inventory</string>
</resources>